deployment/kubernetes/crop-health-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crop-health-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: crop-health-api
  template:
    metadata:
      labels:
        app: crop-health-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: crop-health-fastapi
        image: ghcr.io/openearthplatforminitiative/crop-health-api-fastapi:0.0.4
        ports:
          - containerPort: 5000
      - name: crop-health-torchserve
        image: ghcr.io/openearthplatforminitiative/crop-health-api-torchserve:0.0.3
        ports:
          - containerPort: 8080 # Inference API
          - containerPort: 8081 # Management API
          - containerPort: 8082 # Metrics API
---
apiVersion: v1
kind: Service
metadata:
  name: crop-health-api
spec:
  ports:
    - name: inference-api
      port: 80
      targetPort: 8080
    - name: fastapi
      port: 81  # external port number exposed on the service
      targetPort: 5000  # internal port number in the container
  selector:
    app: crop-health-api

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-crop-health
spec:
  stripPrefix:
    prefixes:
      - /crop-health
    forceSlash: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crop-health-api
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Path(`/crop-health/redoc`) || Path(`/crop-health/openapi.json`) || PathPrefix(`/crop-health/static`)
    priority: 2
    services:
    - kind: Service
      name: crop-health-api
      port: 81
    middlewares:
    - name: stripprefix-crop-health
  - kind: Rule
    match: PathPrefix(`/crop-health`) && !PathPrefix(`/crop-health/metrics`)
    priority: 1
    services:
    - kind: Service
      name: crop-health-api
      port: 80
    middlewares:
    - name: stripprefix-crop-health
